--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,17 +3,17 @@
 ---
   - name: Generate authorization string for PC
     set_fact:
-      nutanix_prism_tmp_auth_string: "{{ nutanix_username }}:{{ nutanix_password }}"
+      nutanix_pulse_auth_string: "{{ nutanix_pulse_username }}:{{ nutanix_pulse_password }}"
     no_log: True
 
   - name: Generate authorization header for PC
     set_fact:
-      nutanix_prism_tmp_auth_api: "Basic {{ nutanix_prism_tmp_auth_string | b64encode(encoding='ascii') }}"
+      nutanix_pulse_auth_api: "Basic {{ nutanix_pulse_auth_string | b64encode(encoding='ascii') }}"
     no_log: True
 
   - name: Configure Pulse
     uri:
-      url: "https://{{ nutanix_host }}:{{ nutanix_port }}/PrismGateway/services/rest/v1/pulse"
+      url: "https://{{ nutanix_pulse_host }}:{{ nutanix_pulse_port }}/PrismGateway/services/rest/v1/pulse"
       method: PUT
       validate_certs: "{{ validate_certs }}"
       body_format: json
@@ -27,13 +27,8 @@
         nosVersion: "{{ nutanix_pulse_nos_version }}"
         remindLater: "{{ nutanix_pulse_remind_later }}"
       headers:
-        Authorization: "{{ nutanix_prism_tmp_auth_api }}"
+        Authorization: "{{ nutanix_pulse_auth_api }}"
       status_code: 200
       return_content: yes
     register: nutanix_pulse_configure
     ignore_errors: no
-
-  - ansible.builtin.fail:
-      msg: "Updating pulse status failed."
-    when:
-      - nutanix_pulse_configure.json.isPulsePromptNeeded
