--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,7 +4,7 @@
   roles:
     - nutanix_role_prism_pulse
   vars:
-    nutanix_host: 10.38.185.37
-    nutanix_username: admin
-    nutanix_password: nx2Tech165!
+    nutanix_pulse_host: 10.38.185.37
+    nutanix_pulse_username: admin
+    nutanix_pulse_password: nx2Tech165!
     nutanix_pulse_status: True
