--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,12 @@
 ---
 # defaults file for nutanix_role_prism_pulse
   validate_certs: no
+  nutanix_debug: False
   nutanix_pulse_username: admin
   nutanix_pulse_port: 9440
   nutanix_pulse_status: True
   nutanix_pulse_default_nutanix_email: nos-asups@nutanix.com
-  nutanix_pulse_enable_default_nutanix_email: false
+  nutanix_pulse_enable_default_nutanix_email: False
   nutanix_pulse_email_contact_list: []
   nutanix_pulse_identification_info_scrubbing_level: "AUTO"
   nutanix_pulse_is_pulse_prompt_needed: False
