--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,3 +37,8 @@
     - debug:
         var: nutanix_pulse_configure
       when: nutanix_debug
+
+      - ansible.builtin.fail:
+          msg: "Pulse configuration failed."
+        when:
+          - not nutanix_prism_eula_accept_eula.failed
